# minor-planet-painter

./: .gitignore  README.md  pyproject.toml
minor_planet_painter/: common.py
scripts/: plot_sssb_Psid_Psyn.py  plot_sssb_angsize.py  plot_sssb_orbelem.py  plot_sssb_skymotion.py  plot_sssb_xy.py  wget_MPCORB_NEA.sh
